# scap-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic_capture.rs  list_targets.rs  permission_check.rs  screenshot_crop.rs  screenshot_full.rs
src/: lib.rs  main.rs
src/capturer/: mod.rs
src/capturer/engine/: mod.rs
src/capturer/engine/linux/: error.rs  mod.rs
src/capturer/engine/linux/wayland/: mod.rs  portal.rs
src/capturer/engine/linux/x11/: mod.rs
src/capturer/engine/mac/: apple_sys.rs  mod.rs  pixel_buffer.rs  pixelformat.rs
src/capturer/engine/win/: mod.rs
src/frame/: mod.rs
src/targets/: mod.rs
src/targets/linux/: mod.rs
src/targets/mac/: mod.rs
src/targets/win/: mod.rs
src/utils/: mod.rs
src/utils/linux/: mod.rs
src/utils/mac/: mod.rs
src/utils/win/: mod.rs
