[package]
name = "scap-rs"
description = "Modern, high-performance screen capture library for Rust. Cross-platform."
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/launcher-rs/scap-rs.git"
keywords = ["screen", "recording", "video", "capture", "media"]
categories = ["graphics", "multimedia", "multimedia::video"]

# 特性配置
[features]
default = ["wayland", "x11"]  # 默认启用 Wayland 和 X11 支持
wayland = ["dep:pipewire", "dep:dbus"]  # Wayland 支持特性
x11 = ["dep:xcb", "dep:x11"]  # X11 支持特性

# 通用依赖
[dependencies]
anyhow = "1.0.86"      # 错误处理库
log = "0.4.16"         # 日志库
sysinfo = "0.31.0"     # 系统信息库

# 开发依赖（用于示例）
[dev-dependencies]
image = "0.25"         # 图像处理库，用于保存截图

# Windows 平台特定依赖
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2.0"  # Windows 屏幕捕获库
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

# macOS 平台特定依赖
[target.'cfg(target_os = "macos")'.dependencies]
tao-core-video-sys = "0.2.0"  # Core Video 系统绑定
core-graphics-helmer-fork = "0.24.0"  # Core Graphics 绑定
screencapturekit = "7.0.1"  # ScreenCaptureKit 绑定
screencapturekit-sys = "0.2.8"  # ScreenCaptureKit 系统绑定
cocoa = "0.26.1"  # Cocoa 框架绑定
objc = "0.2.7"  # Objective-C 运行时绑定

# Linux/FreeBSD 平台特定依赖
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
rand = "0.8.5"  # 随机数库
xcb = { version = "1.7.0", features = ["randr", "xlib_xcb", "xfixes"], optional = true }  # XCB 绑定
x11 = { version ="2.21.0", optional = true }  # X11 绑定
pipewire = { version = "0.10.0", optional = true }  # PipeWire 绑定（用于 Wayland）
dbus = { version = "0.9.11", optional = true }  # D-Bus 绑定
